--- a/index.html
+++ b/index.html
@@ -17,19 +17,31 @@
 <div class="container">
     <img src="images/1.jpg" id="image" alt="Картинка" width="500" height="500">
     <br><br>
-    <button onclick="змінитиКартинку()">Котик!!!!! для тебе!!!!!!!!!!!</button>
+    <button onclick="змінитиКартинкуКотик()">Котик!!!!! для тебе!!!!!!!!!!!</button>
+    <button onclick="змінитиКартинкуЦуцик()">Песик!!!!! для тебе!!!!!!!!!!!</button>
 </div>
 <script>
     let поточнаКартинка = 1;
     const кількістьКартинок = 60; // Замініть на кількість доступних картинок
 
-    function змінитиКартинку() {
+    function змінитиКартинкуКотик() {
         поточнаКартинка++;
         if (поточнаКартинка > кількістьКартинок) {
             поточнаКартинка = 1;
         }
-        document.getElementById('image').src = `images/${поточнаКартинка}.jpg`; // Замініть шлях і назву картинок на свої
+        document.getElementById('image').src = `images/catties/${поточнаКартинка}.jpg`; // Замініть шлях і назву картинок на свої
     }
+
+    let поточнаКартинкаПесик = 1;
+    const кількістьКартинокПесик = 26;
+    function змінитиКартинкуЦуцик() {
+        поточнаКартинкаПесик++;
+        if (поточнаКартинкаПесик > кількістьКартинокПесик) {
+            поточнаКартинкаПесик = 1;
+        }
+        document.getElementById('image').src = `images/doggies/${поточнаКартинка}.jpg`; // Замініть шлях і назву картинок на свої
+    }
+
 </script>
 </body>
 </html>
